# faramesh-core

./: .gitattributes  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  coverage.xml  go.mod  go.sum  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
.github/workflows-templates/: node-sdk-release.yml
Formula/: faramesh.rb
alembic/versions/: 002_execution_gate_fields.py
cmd/faramesh/: agent.go  audit.go  audit_extended.go  auth.go  chaos.go  compensate.go  credential_cmd.go  daemon_client.go  delegate.go  demo.go  explain.go  federation.go  fleet.go  hub.go  identity.go  incident.go  init.go  main.go  mcp.go  model_cmd.go  ops.go  policy.go  policy_extended.go  policy_nlp.go  provenance.go  schedule.go  serve.go  session.go  status.go  stop.go
docs/: ARCHITECTURE.md  CI_SETUP.md  FAQ.md  INTEGRATION_GUIDE.md  LAUNCH_POST_KIT.md  MAINTAINERS.md  MVP_PRODUCTION_RUNBOOK.md  QUICKSTART.md  QUICKSTART_INTEGRATIONS.md  README.md  ROADMAP.md  SDK_REPOS_SETUP.md
docs/fpl/: LANGUAGE_REFERENCE.md
docs/products/: COSTSHIELD.md  HORIZON.md  HUB.md  SVERM.md  TESSERACT.md
examples/: customer-support.fpl  infra-bot.fpl  mcp-server.fpl  starter.fpl
npm/: README.md  package.json
packs/: validate_test.go
policies/: default.yaml
profiles/: default.yaml
sdk/python/: README.md  pyproject.toml
sdk/python/faramesh/: __init__.py  _binary.py  client.py  exceptions.py  govern.py
(+104 files in other folders)
